--- a/style.css
+++ b/style.css
@@ -26,11 +26,10 @@ nav ul{
   padding-top: 1rem;
   }
 
-nav ul li{
-  transition: 0.2s ease-in;
-  /* margin: 0.5rem 1rem; */
+nav ul li a{
+  transition: 0.2s;
   padding: 0.4rem;
-  border-radius: 1.20rem;
+  border-radius: 1.25rem;
 }
 
 nav ul li a{
@@ -40,10 +39,11 @@ font-size: 1.4rem;
 text-decoration: none; 
  }
 
-nav ul li:hover{
+nav ul li a:hover{
    background: #2ecc71;
    /* transition: all 2ms; */
 }
+ 
 
 @media screen and (max-width: 650px) {
   nav ul li a{
@@ -99,7 +99,7 @@ nav ul li:hover{
       color: #e2e7ec;
       text-decoration: none;
       padding: 0.2rem;
-  background-color: inherit;
+      background-color: inherit;
     }
 
       /* Header content responsive */
@@ -138,13 +138,14 @@ nav ul li:hover{
    
 /* skills bar secion  */
 .skillicons{
-  margin-top: 0;
-padding-top: 5%;
+margin-top: 0;
+padding-top: 3rem;
 background-image: radial-gradient(#2ecc71 0.5px, transparent 0.5px), radial-gradient(#2ecc71 0.5px, #191d2b 0.5px);
 background-size: 20px 20px;
 background-position: 0 0,10px 10px;
 position: relative;
-}
+padding-bottom: 7rem;
+ }
 
 .header{
     text-align: center;
@@ -166,65 +167,56 @@ position: relative;
     color: #e2e7ec;
 }
 .container{
-    display: flex;
-    justify-content: center;
-    text-align:justify;
-    align-items: center;
-    padding: 1rem 80px;
-    font-size: .9rem;
-    flex-wrap: wrap;
-
-    text-align: center;
-}
-.container img{
-    position: relative;
-    /* border-radius: 45px; */
-    max-width: 3rem;
-    min-height: 3rem;
-    /* background-color: #fff; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-
-}
-.skill-title h3 {
-color: #e2e7ec;
-margin: 0.5rem;
-    }
-
-.skill-title:hover{
-    transition: .1s ;
-    border-bottom: 0.25rem solid var(--color-secondary);
-    }
-
-.skill-box{
-padding: 1rem;
-color: #e2e7ec;
-cursor: pointer;
-justify-content: space-around;
-display: inline-block;
+  font-size: .9rem;
+  padding-top: 6rem;
+   display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  
  }
 
+.skill-box{
+padding: 0.5rem;
+  }
+
+.skill-title h3 {
+color: #e2e7ec;
+padding-bottom: 8px;
+ }
+ 
+.level{
+visibility: hidden;
+color: #e2e7ec;
+border: 1px solid #e2e7ec ;
+transition: opacity 0.5s ease-in-out;
+width: max-content;
+ padding: 5px 5px;
+text-transform: capitalize;
+margin-top: 10px;
+margin: auto;
+  
+
+}
+
+.skill-title:hover + .level{
+  opacity: 1;
+  visibility: visible;
+}
+
 .skill-title{
     display: flex;
-     align-items: center;
-     flex-direction: column;
-    padding: 0.5rem;
-    margin-bottom: 0.5rem;
+    align-items: center;
+    flex-direction: column;
     font-size: 1rem;
-}
-.img{
-  display: flex;
- }
-.header2{
+ } 
+
+
+.header2{    
     text-align: center;
     color: #e2e7ec;
     padding: 0.7rem;
-     position: relative;
-    font-size: .9rem;
-     }
+    position: relative;
+    font-size: .9rem;  
+  }
 
 
      .header2:after{
@@ -237,11 +229,7 @@ display: inline-block;
         width: 100px;
         background-color: var(--color-secondary);
     }
-
-    .header2 h1{
-        color: #e2e7ec;
-    }
-
+  
 /* .............. */
 
 body{
@@ -256,27 +244,22 @@ body{
  } 
     
 .projects{
-    padding-top: 1em;
+    padding-top: 3rem;
     background-image: radial-gradient(#2ecc71 0.5px, transparent 0.5px), radial-gradient(#2ecc71 0.5px, #191d2b 0.5px);
     background-size: 20px 20px;
     background-position: 0 0,10px 10px;
+    padding-bottom: 3rem;
  
 }
 #project{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    flex-direction: column;
-    margin: 50px 0px;
-   
-    
-}
-.project-heading{
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
+     flex-direction: column;
+    margin: 50px 0px;  
 }
 
+ 
 .portfolio-container{
     display: flex;
     justify-content: center;
@@ -284,7 +267,8 @@ body{
     flex-wrap: wrap;
     max-width: 1200px;
     margin: auto;
-    padding-top: 1rem;
+    padding-top: 4rem;
+    gap: 4rem;
 }
 .portfolio-container a 
 {
@@ -294,20 +278,19 @@ body{
 .portfolio-container a 
 {
   color: #e2e7ec;  
-    
 }
-.portfolio-container ul{
-    list-style: none;
-}
+
 .portfolio-container h2{
     text-align: center;
-    font-size: 1rem;
     justify-content: space-evenly;
+    font-size: 1rem;
    }
 
  .portfolio-container h2:hover{
-     text-decoration:underline var(--color-secondary) solid 0.2rem;
-  }
+color: #2ecc71;
+transition: 0.3s;
+text-decoration: underline;
+}
  
 .portfolio-box{
     max-width:330px;
@@ -315,10 +298,11 @@ body{
     border: 1px solid #e2e7ec;
     margin: 1rem;
     background-color: var(--color-primary);
-  }
+   }
 
   .portfolio-box h2{
     color: #e2e7ec;
+    padding-top: 8px;
   }
  
 .portfolio-box img{
@@ -337,122 +321,139 @@ body{
     width:80%;
 }
 }
-@media(max-width:550px){
- 
-    .project-heading h3
-    {
-        font-size: 1.8rem;
-    }
-}
- 
- 
-/* Style inputs with type="text", 
-select elements and textareas */
-input[type=text], [type=email], select, textarea {
-    width: 100%; 
-     padding: 1rem;
-     border-radius: 4px; 
-     box-sizing: border-box; 
-    /* Make sure that padding and width stays in place */
-    margin-top: 0.5rem; 
-     margin-bottom: 1rem;
-    resize: vertical 
-   }
+ /* commucation section */
 
-   section{
-    padding-top: 7%;
+ #contact{
+  flex-direction: column;
+  justify-content: space-evenly;
+  text-align:justify;
+  align-items: center;
+  flex-wrap: wrap;
+  text-align: center;
+ }
+
+section{
+padding-top: 10rem;
 background-image: radial-gradient(#2ecc71 0.5px, transparent 0.5px), radial-gradient(#2ecc71 0.5px, #191d2b 0.5px);
 background-size: 20px 20px;
- background-position: 0 0,10px 10px;
- padding-bottom: 7%;
+background-position: 0 0,10px 10px;
+padding-bottom: 7%;
+ } 
 
-   }
-   .contact{
-    margin-left:20%;
-    margin-right: 20%;
-    background-color: var(--color-primary);
-    border: solid 1px #e2e7ec;
-    padding: 2rem;
-     
-   }
- 
-   
-.button{
-    background-color: var(--color-secondary);
-    color: #e2e7ec;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    opacity: 0.9; 
-}
-.button:hover{
-opacity: 1;
-}
+.header3{    
+   color: #e2e7ec;
+  padding: 0.7rem;
+  position: relative;
+  font-size: 1.1rem;  
+ }
 
-
- .header3 {
-    text-align: center;
-    color: #e2e7ec;
-    padding: 0.7rem;
-    position: relative;
-    font-size: .9rem;
-}
-  
-  .header3:after{
+.header3:after{
     content: '';
     position: absolute;
-    /* bottom: 0; */
+    bottom: 0;
     left: 50%;
     transform: translateX(-50%);
     height: 4px;
     width: 100px;
     background-color: var(--color-secondary);
-    }
+ }
 
+.contactinfo{
+padding-top: 3rem;
+ }
 
-.contact p{
-    color: #e2e7ec; 
-    text-decoration: none; 
-     text-align: center;
+.contactinfo ul{
+  position: relative;
+   display: flex;
+  text-align: center;
+  justify-content: space-evenly;
+   }
 
-      
-}
-.lable{
-    color: #e2e7ec;
-}
+.line{
+  border: #e2e7ec solid 1px;
+  margin: 1rem;
+ }
+
+.contact-box .info{
+font-family: sans-serif;
+font-weight: 600;
+color: #e2e7ec;
+ }
+
+ .fa-solid{
+color: #2ecc71;
+font-size: 1.2rem;
+background-color: #e2e7ec;
+padding: 8px; 
+border-radius: 50%;
  
-.email p {
-  display: inline;
-  background-size: 55%;
-  text-decoration: none;
-  line-break: anywhere;
-     }
-
- .email{
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-        text-align: center;
-        padding-left: 1rem;
-        padding-right: 1rem;
-
-     }
-
- .email a {
-  display: inline-block;
-  text-decoration: none;
-  color:#2ecc71;
-  line-break: anywhere;
-
 }
+
+ .fa-brands{
+  color: #2ecc71;
+  font-size: 1.3rem;
+  background-color: #e2e7ec;
+  padding: 8px;
+  border-radius: 50%;
+}
+
+  .contact-box a {
+   text-decoration: none;
+   color: #e2e7ec;
+   } 
+
+  .contact-box h4{
+    padding: 10px;
+    color: #e2e7ec;
+    word-wrap: break-word; 
+    font-weight: 400;
+    }
+    
+  .contact-box h4:hover{
+      transition: 0.2s;
+      color: #2ecc71;
+  }
+   
+ .space{
+  display: flex;
+  flex-direction: column;
+ }
+@media(min-width:740px){
+  
+.contactinfo{
+   margin-right: 2.5rem;
+  }
+}
+@media(max-width:740px)  {
+   .contactinfo ul{
+    display: flex;
+  flex-direction: column;
+    } 
+  .contact-box{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+
+  }
+    .contactinfo{
+      padding-bottom: 2rem;
+      padding-top: 2rem;
+      }
+    #contact{
+      padding-top: 3rem;
+      padding-bottom: 2rem;
+
+    }
+   
+
+  }
+
 
  /* footer   */
 footer {
          display: block;
         max-width: 100%;
-          background-color: var(--color-secondary);
-
-    }
+       background-color: var(--color-secondary);
+     }
 
     .footer-col {
         max-width: 25%;
